--- a/main.css
+++ b/main.css
@@ -3,5 +3,15 @@
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  
-}
+  }
+
+  .project-card{
+    margin:25px;
+    border: solid lightblue;
+    }
+
+  .links{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
