--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
+html, body {
+  height: 100%;
+}
+
+body{
+flex: 1;  
+display: flex;
+flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
 #projectsPage{
   display: flex;
   justify-content: center;
@@ -7,15 +21,44 @@
 
   .project-card{
     margin:25px;
-    border: solid lightblue;
-    }
-
-  .links{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    border: solid black;   
   }
 
   .card-title{
     font-weight: bold
   }
+  
+.page-footer{
+  flex-shrink: 0;
+  text-align: center;
+  color:black;
+  width: 100%
+}
+
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#navLinks a {
+  margin: 1em;
+  color:black;
+}
+
+.rlinks{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#myName{
+  margin:15px
+}
+
+#bioPage,#technologiesPage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
